# pydbus-stubs

./: .project.jsonnet  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  pyproject.toml
.claude/agents/: click-auditor.md  coverage-improver.md  docstring-fixer.md  mypy-fixer.md  python-expert.md  regen.md  release.md  test-writer.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.github/instructions/: general.instructions.md
.github/workflows/: publish.yml  qa.yml  release.yml
pydbus-stubs/: __init__.pyi  _inspect3.pyi  bus.pyi  bus_names.pyi  exitable.pyi  generic.pyi  identifier.pyi  method_call_context.pyi  proxy.pyi  proxy_method.pyi  proxy_property.pyi  proxy_signal.pyi  publication.pyi  registration.pyi  request_name.pyi  subscription.pyi
