[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "commitizen>=4.13.10",
  "cz-path>=0.0.6",
  "mypy>=1.20.1",
  "pydbus>=0.6.0",
  "pygobject>=3.56.2",
  "ruff==0.15.11",
  "ty>=0.0.31",
  "yapf>=0.43.0",
]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Stubs Only",
]
dependencies = ["pygobject-stubs>=2.17.0", "typing-extensions>=4.15.0"]
description = "PEP 561 type stubs for pydbus."
keywords = ["dbus", "pep561", "stubs", "types"]
license = "MIT"
name = "pydbus-stubs"
readme = "README.md"
requires-python = ">=3.10,<4.0"
version = "0.0.4"

[[project.authors]]
email = "audvare@gmail.com"
name = "Andrew Udvare"

[project.urls]
Issues = "https://github.com/Tatsh/pydbus-stubs/issues"
documentation = "https://pydbus-stubs.readthedocs.org"
homepage = "https://tatsh.github.io/pydbus-stubs/"
repository = "https://github.com/Tatsh/pydbus-stubs"

[tool.commitizen]
name = "cz_path"
remove_path_prefixes = ["include", "pydbus-stubs", "src"]
tag_format = "v$version"
version_files = [".wiswa.jsonnet", "CITATION.cff", "README.md", "package.json"]
version_provider = "pep621"

[tool.doc8]
max-line-length = 100

[tool.hatch.build.targets.sdist]
include = ["pydbus-stubs"]

[tool.hatch.build.targets.wheel]
packages = ["pydbus-stubs"]

[tool.mypy]
cache_dir = "~/.cache/mypy"
explicit_package_bases = true
platform = "linux"
python_version = "3.10"
show_column_numbers = true
strict = true
strict_optional = true
warn_unreachable = true

[tool.pyright]
deprecateTypingAliases = true
enableExperimentalFeatures = true
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]
include = ["./pydbus-stubs"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "none"
reportImportCycles = "error"
reportMissingModuleSource = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "none"
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[tool.ruff]
cache-dir = "~/.cache/ruff"
force-exclude = true
line-length = 100
namespace-packages = ["docs", "tests"]
target-version = "py310"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "A002",
  "ANN401",
  "COM812",
  "CPY001",
  "D203",
  "D204",
  "D212",
  "E303",
  "FBT001",
  "I001",
  "N",
  "N818",
  "S",
  "S404",
  "S603",
  "T201",
  "TD002",
  "TID252",
]
preview = true

[tool.ruff.lint.flake8-builtins]
allowed-modules = ["types", "typing"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
from-first = true
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-locals = 20
max-positional-args = 15
max-public-methods = 30
max-returns = 10
max-statements = 100

[tool.uv]
default-groups = "all"
exclude-newer = "1 week"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_dict_value = true
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
column_limit = 100
continuation_align_style = "SPACE"
continuation_indent_width = 4
dedent_closing_brackets = false
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
indent_dictionary_value = true
indent_width = 4
join_multiple_lines = true
no_spaces_around_selected_binary_operators = false
space_between_ending_comma_and_closing_bracket = false
spaces_around_default_or_named_assign = false
spaces_around_power_operator = true
spaces_before_comment = 2
split_all_comma_separated_values = false
split_arguments_when_comma_terminated = false
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = false
split_before_expression_after_opening_paren = false
split_before_first_argument = false
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = false
split_penalty_after_opening_bracket = 30
split_penalty_after_unary_operator = 10000
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = false

[tool.yapfignore]
ignore_patterns = [".venv", ".wiswa-ci", "node_modules"]
